# controllers/review.js
@@ -3,8 +3,6 @@ const mongodb = require('../db/connect'); // is a reference to my database conne
 const ObjectId = require('mongodb').ObjectId; // is a type provided by the MongoDB driver. Allows me to work with MongoDB's unique identifiers.
 
 // Function that handles a GET request.
-// It first retrieves the collection named 
-// -contacts- from the database:
 const getAllReviews = async (req, res, next) => {
   try {
     const result = await mongodb.getDb().db('Vet').collection('reviews').find().toArray();
@@ -17,15 +15,15 @@ const getAllReviews = async (req, res, next) => {
 };
 
   
-// Similar to -getAll- function.
+// Gets a single review
 const getSingleReview = async (req, res, next) => {
   try {
-    const userId = new ObjectId(req.params.id);
+    const reviewId = new ObjectId(req.params.id);
     const result = await mongodb
       .getDb()
       .db('Vet')
       .collection('reviews')
-      .find({ _id: userId })
+      .find({ _id: reviewId })
       .toArray();
     res.setHeader('Content-Type', 'application/json');
     res.status(200).json(result[0]);
@@ -35,19 +33,17 @@ const getSingleReview = async (req, res, next) => {
   }
 };
 
-// Create a POST route for creating new contacts that returns the ID 
-// of the new contact and a 201 status
+// Create a POST 
 const createReview = async (req, res) => {
   try {
-    const contact = {
-      rating: req.body.rating,
-      comment: req.body.comment,
-    };
-    const response = await mongodb.getDb().db('Vet').collection('reviews').insertOne(contact);
+    const review = req.body; // Assuming req.body contains the user data
+
+    const response = await mongodb.getDb().db('Vet').collection('reviews').insertOne({ review });
+
     if (response.acknowledged) {
-      res.status(201).json(response);
+      res.status(201).json({ message: 'Review created successfully' });
     } else {
-      res.status(500).json(response.error);
+      res.status(500).json({ error: 'Failed to create Review' });
     }
   } catch (error) {
     console.error(error);
